# terraform-training-001

./: .envrc.example  .gitignore  README.md  pyproject.toml
ansible/: create-s3-bucket-for-tfstate.yaml  destory-s3-bucket-for-tfstate.yaml
docs/: 001_getStarted.md  002_RDS.md  003_module.md  004_ssl_certificate.md
terraform/: .terraform.lock.hcl  acm.tf  data.tf  elb.tf  iam.tf  includes.tf  key_pairs.tf  main.tf  network.tf  parameter_store.tf  providers.tf  rds.tf  route53.tf  security_group.tf  terraform.tfvars.example  variables.tf
terraform/EC2/app_server/: main.tf  outputs.tf  variables.tf
terraform/EC2/bastion/: main.tf
terraform/modules/create_key_pair/: README.md  main.tf  outputs.tf  variables.tf
