[tool.poetry]
name = "terraform-training-001"
version = "0.1.0"
description = ""
authors = ["yugo uchiida <y.uchiida@nirneege.com>"]
readme = "README.md"
packages = [{include = "terraform_training_001"}]

[tool.poetry.dependencies]
python = "^3.11"
ansible = "^9.1.0"
botocore = "^1.34.27"
boto3 = "^1.34.27"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
